Merged ICCB-L v1.9.5 rc3 development branch to main trunk:   - merge -r4278:4377 http://forge.abcd.harvard.edu/svn/screensaver/branches/iccbl/1.9.5-dev
git-svn-id: https://forge.abcd.harvard.edu/svn/screensaver/trunk@4380 80c535d0-b110-0410-b4de-9279f94142c3