@@ -9,209 +9,220 @@
 
 package edu.harvard.med.screensaver.model;
 
+import com.google.common.collect.Lists;
 import junit.framework.TestCase;
 
 import edu.harvard.med.screensaver.model.meta.Cardinality;
+import edu.harvard.med.screensaver.model.meta.PropertyNameAndValue;
 import edu.harvard.med.screensaver.model.meta.PropertyPath;
 import edu.harvard.med.screensaver.model.meta.RelationshipPath;
-import edu.harvard.med.screensaver.model.meta.RelationshipPath.RelationshipPathIterator;
 
 public class PropertyPathTest extends TestCase
 {
-  private static class DummyEntity extends AbstractEntity<Integer> {
-
-    private static final long serialVersionUID = 1L;
-
-    public DummyEntity(int id)
-    {
-      setEntityId(id);
-    }
-
-    @Override
-    public Object acceptVisitor(AbstractEntityVisitor visitor)
-    {
-      return null;
-    }
-  }
-
-  public void testZeroElementPath()
+  public void testZeroElements()
   {
-    PropertyPath propertyPath = new PropertyPath<AbstractEntity>(AbstractEntity.class, "name");
-    assertEquals(AbstractEntity.class, propertyPath.getRootEntityClass());
+    PropertyPath<Parent> propertyPath = RelationshipPath.from(Parent.class).toProperty("name");
+    assertEquals(Parent.class, propertyPath.getRootEntityClass());
     assertEquals("size", 0, propertyPath.getPathLength());
-    assertEquals("<AbstractEntity>.name", propertyPath.toString());
+    assertEquals("<Parent>.name", propertyPath.toString());
     assertEquals("name", propertyPath.getPath());
     assertEquals("name", propertyPath.getPropertyName());
-    assertEquals("<AbstractEntity>", propertyPath.getAncestryPath().toString());
+    assertEquals("<Parent>", propertyPath.getAncestryPath().toString());
     assertEquals("", propertyPath.getAncestryPath().getPath());
     assertEquals("", propertyPath.getLeaf());
+    assertFalse(propertyPath.pathIterator().hasNext());
   }
 
-  public void testOneElementPath()
+  public void testOneElement()
   {
-    PropertyPath<AbstractEntity> propertyPath = new RelationshipPath<AbstractEntity>(AbstractEntity.class, "child").toProperty("name");
-    assertEquals(AbstractEntity.class, propertyPath.getRootEntityClass());
+    PropertyPath<Parent> propertyPath = RelationshipPath.from(Parent.class).to("child").toProperty("name");
+    assertEquals(Parent.class, propertyPath.getRootEntityClass());
     assertEquals("size", 1, propertyPath.getPathLength());
-    assertEquals("<AbstractEntity>.child.name", propertyPath.toString());
+    assertEquals("<Parent>.child.name", propertyPath.toString());
     assertEquals("child.name", propertyPath.getPath());
     assertEquals("name", propertyPath.getPropertyName());
-    assertEquals("<AbstractEntity>", propertyPath.getAncestryPath().toString());
-    assertEquals("", propertyPath.getAncestryPath().getPath());
-    assertEquals("child", propertyPath.getLeaf());
-  }
-
-  public void testMultipleElementsPath()
-  {
-    PropertyPath propertyPath = new RelationshipPath<AbstractEntity>(AbstractEntity.class, "child").to("sibling").toProperty("name");
-    assertEquals("size", 2, propertyPath.getPathLength());
-    assertEquals("<AbstractEntity>.child.sibling.name", propertyPath.toString());
+    assertEquals("<Parent>.child", propertyPath.getAncestryPath().toString());
     assertEquals("child", propertyPath.getAncestryPath().getPath());
-    assertEquals("<AbstractEntity>.child", propertyPath.getAncestryPath().toString());
-    assertEquals("sibling", propertyPath.getLeaf());
-
-    RelationshipPathIterator iter = propertyPath.iterator();
-    assertTrue(iter.hasNext());
-    iter.next();
-    assertEquals("child", iter.getPathElement());
-    assertNull(iter.getRestrictionPropertyNameAndValue());
-    assertTrue(iter.hasNext());
-    iter.next();
-    assertEquals("sibling", iter.getPathElement());
-    assertNull(iter.getRestrictionPropertyNameAndValue());
-    assertFalse(iter.hasNext());
-    assertEquals("name", propertyPath.getPropertyName());
+    assertEquals("<Parent>", propertyPath.getAncestryPath().getAncestryPath().toString());
+    assertEquals("", propertyPath.getAncestryPath().getAncestryPath().getPath());
+    assertNull(propertyPath.getAncestryPath().getAncestryPath().getAncestryPath());
+    assertEquals("child", propertyPath.getLeaf());
+    assertEquals(Lists.newArrayList("child"), Lists.newArrayList(propertyPath.pathIterator()));
   }
 
-  public void testMultipleElementsWithEntityIdPath()
+  public void testMultipleElements()
   {
-    AbstractEntity sibling = new DummyEntity(1);
-    AbstractEntity toy = new DummyEntity(2);
+    PropertyPath propertyPath = RelationshipPath.from(Parent.class).to("child").to("sibling").toProperty("name");
+    assertEquals("size", 2, propertyPath.getPathLength());
+    assertEquals("<Parent>.child.sibling.name", propertyPath.toString());
+    assertEquals("child.sibling", propertyPath.getAncestryPath().getPath());
+    assertEquals("<Parent>.child.sibling", propertyPath.getAncestryPath().toString());
+    assertEquals("child", propertyPath.getAncestryPath().getAncestryPath().getPath());
+    assertEquals("<Parent>.child", propertyPath.getAncestryPath().getAncestryPath().toString());
+    assertEquals("sibling", propertyPath.getLeaf());
+    assertEquals(Lists.newArrayList("child", "sibling"),
+                 Lists.newArrayList(propertyPath.pathIterator()));
+  }
+
+  public void testMultipleElementsWithRestrictions()
+  {
+    Child sibling = new Child(1);
+    Toy toy = new Toy(2);
     PropertyPath propertyPath = 
-      new RelationshipPath<AbstractEntity>(AbstractEntity.class, "child").to("siblings").restrict("id", sibling.getEntityId()).
+      RelationshipPath.from(Parent.class).to("child").to("siblings").restrict("id", sibling.getEntityId()).
       to("toys").restrict("id", toy.getEntityId()).toProperty("name");
     assertEquals("size", 3, propertyPath.getPathLength());
-    assertEquals("<AbstractEntity>.child.siblings[id=1].toys[id=2].name", propertyPath.toString());
+    assertEquals("<Parent>.child.siblings[id=1].toys[id=2].name", propertyPath.toString());
+    assertEquals(new PropertyNameAndValue("id", Integer.valueOf(2)), propertyPath.getLeafRestriction());
     assertEquals("child.siblings.toys.name", propertyPath.getPath());
-    assertEquals("<AbstractEntity>.child.siblings[id=1]", propertyPath.getAncestryPath().toString());
-    assertEquals("child.siblings", propertyPath.getAncestryPath().getPath());
+    assertEquals("<Parent>.child.siblings[id=1].toys[id=2]", propertyPath.getAncestryPath().toString());
+    assertEquals(new PropertyNameAndValue("id", Integer.valueOf(2)), propertyPath.getLeafRestriction());
+    assertEquals("child.siblings.toys", propertyPath.getAncestryPath().getPath());
+    assertEquals("<Parent>.child.siblings[id=1]", propertyPath.getAncestryPath().getAncestryPath().toString());
+    assertEquals(new PropertyNameAndValue("id", Integer.valueOf(1)), propertyPath.getAncestryPath().getAncestryPath().getLeafRestriction());
+    assertEquals("child.siblings", propertyPath.getAncestryPath().getAncestryPath().getPath());
     assertEquals("toys", propertyPath.getLeaf());
-    RelationshipPathIterator iter = propertyPath.iterator();
-
-
-    assertTrue(iter.hasNext());
-    iter.next();
-    assertEquals("child", iter.getPathElement());
-    assertNull(iter.getRestrictionPropertyNameAndValue());
-
-    assertTrue(iter.hasNext());
-    iter.next();
-    assertEquals("siblings", iter.getPathElement());
-    assertEquals("id", iter.getRestrictionPropertyNameAndValue().getName());
-    assertEquals(sibling.getEntityId(), iter.getRestrictionPropertyNameAndValue().getValue());
-
-    assertTrue(iter.hasNext());
-    iter.next();
-    assertEquals("toys", iter.getPathElement());
-    assertEquals("id", iter.getRestrictionPropertyNameAndValue().getName());
-    assertEquals(toy.getEntityId(), iter.getRestrictionPropertyNameAndValue().getValue());
-
-    assertFalse(iter.hasNext());
+    assertEquals(Lists.newArrayList("child", "siblings", "toys"),
+                 Lists.newArrayList(propertyPath.pathIterator()));
     assertEquals("name", propertyPath.getPropertyName());
-  }
-
-  public void testIntermediatePaths()
-  {
-    AbstractEntity sibling = new DummyEntity(1);
-    AbstractEntity toy = new DummyEntity(2);
-    PropertyPath propertyPath = new RelationshipPath<AbstractEntity>(AbstractEntity.class, "child").to("siblings").restrict("id", sibling.getEntityId()).to("toys").restrict("id", toy.getEntityId()).toProperty("name");
-    RelationshipPathIterator iterator = propertyPath.iterator();
-    iterator.next();
-    RelationshipPath intermediatePropertyPath = iterator.getIntermediatePath();
-    assertEquals("<AbstractEntity>.child", intermediatePropertyPath.toString());
-    assertEquals("child", intermediatePropertyPath.getPath());
-    iterator.next();
-    intermediatePropertyPath = iterator.getIntermediatePath();
-    assertEquals("<AbstractEntity>.child.siblings[id=1]", intermediatePropertyPath.toString());
-    assertEquals("child.siblings", intermediatePropertyPath.getPath());
-    iterator.next();
-    intermediatePropertyPath = iterator.getIntermediatePath();
-    assertEquals("<AbstractEntity>.child.siblings[id=1].toys[id=2]", intermediatePropertyPath.toString());
-    assertEquals("child.siblings.toys", intermediatePropertyPath.getPath());
-    assertFalse(iterator.hasNext());
   }
 
   public void testEquality()
   {
-    AbstractEntity sibling = new DummyEntity(1);
-    AbstractEntity toy1 = new DummyEntity(2);
-    AbstractEntity toy2 = new DummyEntity(3);
-    PropertyPath propertyPath1a = new RelationshipPath<AbstractEntity>(AbstractEntity.class, "child").to("siblings").restrict("id", sibling.getEntityId()).to("toys").restrict("id", toy1.getEntityId()).toProperty("name");
-    PropertyPath propertyPath1b = new RelationshipPath<AbstractEntity>(AbstractEntity.class, "child").to("siblings").restrict("id", sibling.getEntityId()).to("toys").restrict("id", toy1.getEntityId()).toProperty("name");
-    PropertyPath propertyPath1c = new RelationshipPath<AbstractEntity>(AbstractEntity.class, "child").to("siblings").restrict("id", sibling.getEntityId()).to("toys").restrict("id", toy1.getEntityId()).toProperty("size");
-    PropertyPath propertyPath2 =  new RelationshipPath<AbstractEntity>(AbstractEntity.class, "child").to("siblings").restrict("id", sibling.getEntityId()).to("toys").restrict("id", toy2.getEntityId()).toProperty("name");
-    RelationshipPath propertyPath3 = new RelationshipPath<AbstractEntity>(AbstractEntity.class, "child").to("siblings").restrict("id", sibling.getEntityId()).to("toys").restrict("id", toy1.getEntityId());
+    Child sibling = new Child(1);
+    Toy toy1 = new Toy(2);
+    Toy toy2 = new Toy(3);
+    PropertyPath propertyPath1a = RelationshipPath.from(Parent.class).to("child").to("siblings").restrict("id", sibling.getEntityId()).to("toys").restrict("id", toy1.getEntityId()).toProperty("name");
+    PropertyPath propertyPath1b = RelationshipPath.from(Parent.class).to("child").to("siblings").restrict("id", sibling.getEntityId()).to("toys").restrict("id", toy1.getEntityId()).toProperty("name");
+    PropertyPath propertyPath1c = RelationshipPath.from(Parent.class).to("child").to("siblings").restrict("id", sibling.getEntityId()).to("toys").restrict("id", toy1.getEntityId()).toProperty("size");
+    PropertyPath propertyPath2 = RelationshipPath.from(Parent.class).to("child").to("siblings").restrict("id", sibling.getEntityId()).to("toys").restrict("id", toy2.getEntityId()).toProperty("name");
+    RelationshipPath relPath3 = RelationshipPath.from(Parent.class).to("child").to("siblings").restrict("id", sibling.getEntityId()).to("toys").restrict("id", toy1.getEntityId());
 
     assertEquals(propertyPath1a, propertyPath1b);
     assertEquals(propertyPath1a.hashCode(), propertyPath1b.hashCode());
-    assertEquals(propertyPath1a.iterator().getIntermediatePath(), propertyPath1b.iterator().getIntermediatePath());
-    assertEquals(propertyPath1a.iterator().getIntermediatePath().hashCode(), propertyPath1b.iterator().getIntermediatePath().hashCode());
 
     assertFalse(propertyPath1a.equals(propertyPath1c));
     assertFalse(propertyPath1a.hashCode() == propertyPath1c.hashCode());
-    assertEquals(propertyPath1a.iterator().getIntermediatePath(), propertyPath1c.iterator().getIntermediatePath());
-    assertEquals(propertyPath1a.iterator().getIntermediatePath().hashCode(), propertyPath1c.iterator().getIntermediatePath().hashCode());
 
-    assertEquals(propertyPath3.iterator().getIntermediatePath(), propertyPath1a.iterator().getIntermediatePath());
-    assertEquals(propertyPath3.iterator().getIntermediatePath().hashCode(), propertyPath1a.iterator().getIntermediatePath().hashCode());
     assertFalse(propertyPath1a.equals(propertyPath2));
     assertFalse(propertyPath1a.hashCode() == propertyPath2.hashCode());
+
+    assertEquals(propertyPath1a.getAncestryPath(), relPath3);
   }
   
   public void testHasRestrictions()
   {
-    assertTrue("has restrictions", new RelationshipPath<AbstractEntity>(AbstractEntity.class, "child").to("siblings").restrict("id", 1).hasRestrictions());
-    assertTrue("has restrictions", new RelationshipPath<AbstractEntity>(AbstractEntity.class, "child").restrict("id", 1).to("siblings").restrict("id", 1).hasRestrictions());
-    assertTrue("has restrictions", new RelationshipPath<AbstractEntity>(AbstractEntity.class, "child").restrict("id", 1).to("siblings").hasRestrictions());
-    assertFalse("has restrictions", new RelationshipPath<AbstractEntity>(AbstractEntity.class, "child").to("siblings").hasRestrictions());
+    assertTrue("has restrictions", RelationshipPath.from(Parent.class).to("child").to("siblings").restrict("id", 1).hasRestrictions());
+    assertTrue("has restrictions", RelationshipPath.from(Parent.class).to("child").restrict("id", 1).to("siblings").restrict("id", 1).hasRestrictions());
+    assertTrue("has restrictions", RelationshipPath.from(Parent.class).to("child").restrict("id", 1).to("siblings").hasRestrictions());
+    assertFalse("has restrictions", RelationshipPath.from(Parent.class).to("child").to("siblings").hasRestrictions());
   }
   
+  public void testUnrestrictedPathConversion()
+  {
+    assertFalse(RelationshipPath.from(Parent.class).to("child").restrict("id", 1).to("siblings").restrict("id", 1).getUnrestrictedPath().hasRestrictions());
+    assertEquals(RelationshipPath.from(Parent.class).to("child").to("siblings"),
+                 RelationshipPath.from(Parent.class).to("child").restrict("id", 1).to("siblings").restrict("id", 1).getUnrestrictedPath());
+
+    assertFalse(RelationshipPath.from(Parent.class).to("child").restrict("id", 1).to("siblings").restrict("id", 1).toProperty("property").getUnrestrictedPath().hasRestrictions());
+    assertEquals(RelationshipPath.from(Parent.class).to("child").to("siblings").toProperty("property"),
+                 RelationshipPath.from(Parent.class).to("child").restrict("id", 1).to("siblings").restrict("id", 1).toProperty("property").getUnrestrictedPath());
+  }
+
   /**
    * Test that PropertyPath allows an empty string for the property name value,
    * since this usage is required for collections of elements, which have no
    * properties other than their immediate value (as opposed to collections of
    * entities, which are comprised of one or more properties).
    */
-  public void testCollectionOfElementsUsage()
+  public void testCollectionOfValuesUsage()
   {
-    PropertyPath propertyPath1 = new RelationshipPath<AbstractEntity>(AbstractEntity.class, "child").to("siblings").to("nicknames").toCollectionOfValues();
+    PropertyPath propertyPath1 = RelationshipPath.from(Parent.class).to("child").to("siblings").toCollectionOfValues("nicknames");
     assertEquals("child.siblings.nicknames", propertyPath1.getPath());
-    assertEquals("", propertyPath1.getPropertyName());
+    assertEquals("nicknames", propertyPath1.getPropertyName());
     
-    PropertyPath propertyPath2 = new RelationshipPath<AbstractEntity>(AbstractEntity.class, "child").to("siblings").to("nicknames").toCollectionOfValues();
+    PropertyPath propertyPath2 = RelationshipPath.from(Parent.class).to("child").to("siblings").toCollectionOfValues("nicknames");
     assertEquals(propertyPath1, propertyPath2);
   }
   
   public void testAppend()
   {
-    PropertyPath<AbstractEntity> relationship2 = new RelationshipPath<AbstractEntity>(AbstractEntity.class, "grandchild").restrict("age", new Integer(1)).to("greatgrandchild").toProperty("name");
-    PropertyPath<AbstractEntity> relationship = new RelationshipPath<AbstractEntity>(AbstractEntity.class, "child").to(relationship2);
+    PropertyPath<Parent> relationship2 = RelationshipPath.from(Parent.class).to("grandchild").restrict("age", Integer.valueOf(1)).to("greatgrandchild").toProperty("name");
+    PropertyPath<Parent> relationship = RelationshipPath.from(Parent.class).to("child").to(relationship2);
     assertEquals(3, relationship.getPathLength());
     assertEquals("child.grandchild.greatgrandchild.name", relationship.getPath());
-    assertEquals("<AbstractEntity>.child.grandchild[age=1].greatgrandchild.name", relationship.toString());
+    assertEquals("<Parent>.child.grandchild[age=1].greatgrandchild.name", relationship.toString());
   }
 
   public void testCardinality()
   {
-    assertEquals(Cardinality.TO_ONE, new RelationshipPath<AbstractEntity>(AbstractEntity.class, "parent", Cardinality.TO_ONE).getCardinality());
-    assertEquals(Cardinality.TO_ONE, new RelationshipPath<AbstractEntity>(AbstractEntity.class, "parent", Cardinality.TO_ONE).to(new RelationshipPath<AbstractEntity>(AbstractEntity.class, "parent", Cardinality.TO_ONE)).getCardinality());
-    assertEquals(Cardinality.TO_ONE, new RelationshipPath<AbstractEntity>(AbstractEntity.class, "parent", Cardinality.TO_ONE).to(new RelationshipPath<AbstractEntity>(AbstractEntity.class, "parent", Cardinality.TO_ONE)).toProperty("value").getCardinality());
-    assertEquals(Cardinality.TO_MANY, new RelationshipPath<AbstractEntity>(AbstractEntity.class, "parent", Cardinality.TO_ONE).to(new RelationshipPath<AbstractEntity>(AbstractEntity.class, "items", Cardinality.TO_MANY)).toCollectionOfValues().getCardinality());
-    assertEquals(Cardinality.TO_MANY, new RelationshipPath<AbstractEntity>(AbstractEntity.class, "children", Cardinality.TO_MANY).getCardinality());
-    assertEquals(Cardinality.TO_MANY, new RelationshipPath<AbstractEntity>(AbstractEntity.class, "children", Cardinality.TO_MANY).to(new RelationshipPath<AbstractEntity>(AbstractEntity.class, "children", Cardinality.TO_MANY)).getCardinality());
-    assertEquals(Cardinality.TO_MANY, new RelationshipPath<AbstractEntity>(AbstractEntity.class, "children", Cardinality.TO_MANY).to(new RelationshipPath<AbstractEntity>(AbstractEntity.class, "children", Cardinality.TO_MANY)).to(new RelationshipPath<AbstractEntity>(AbstractEntity.class, "parent", Cardinality.TO_ONE)).getCardinality());
-    assertEquals(Cardinality.TO_MANY, new RelationshipPath<AbstractEntity>(AbstractEntity.class, "children", Cardinality.TO_MANY).to(new RelationshipPath<AbstractEntity>(AbstractEntity.class, "children", Cardinality.TO_MANY)).toProperty("value").getCardinality());
-    assertEquals(Cardinality.TO_ONE, new RelationshipPath<AbstractEntity>(AbstractEntity.class, "children", Cardinality.TO_MANY).restrict("name", "Sam").to(new RelationshipPath<AbstractEntity>(AbstractEntity.class, "children", Cardinality.TO_MANY)).restrict("name", "Joe").getCardinality()); 
-    assertEquals(Cardinality.TO_MANY, new RelationshipPath<AbstractEntity>(AbstractEntity.class, "children", Cardinality.TO_MANY).restrict("name", "Sam").to(new RelationshipPath<AbstractEntity>(AbstractEntity.class, "children", Cardinality.TO_MANY)).getCardinality());
+    assertEquals(Cardinality.TO_ONE, RelationshipPath.from(Parent.class).to("parent", Cardinality.TO_ONE).getCardinality());
+    assertEquals(Cardinality.TO_ONE, RelationshipPath.from(Parent.class).to("parent", Cardinality.TO_ONE).to(RelationshipPath.from(Parent.class).to("parent", Cardinality.TO_ONE)).getCardinality());
+    assertEquals(Cardinality.TO_ONE, RelationshipPath.from(Parent.class).to("parent", Cardinality.TO_ONE).toProperty("value").getCardinality());
+    assertEquals(Cardinality.TO_MANY, RelationshipPath.from(Parent.class).to("parent", Cardinality.TO_ONE).to(RelationshipPath.from(Parent.class).toCollectionOfValues("items")).getCardinality());
+    assertEquals(Cardinality.TO_MANY, RelationshipPath.from(Parent.class).to("children", Cardinality.TO_MANY).getCardinality());
+    assertEquals(Cardinality.TO_MANY, RelationshipPath.from(Parent.class).to("children", Cardinality.TO_MANY).to(RelationshipPath.from(Child.class).to("children", Cardinality.TO_MANY)).getCardinality());
+    assertEquals(Cardinality.TO_MANY, RelationshipPath.from(Parent.class).to("children", Cardinality.TO_MANY).to(RelationshipPath.from(Child.class).to("children", Cardinality.TO_MANY)).to(RelationshipPath.from(Child.class).to("parent", Cardinality.TO_ONE)).getCardinality());
+    assertEquals(Cardinality.TO_MANY, RelationshipPath.from(Parent.class).to("children", Cardinality.TO_MANY).toProperty("value").getCardinality());
+    assertEquals(Cardinality.TO_ONE, RelationshipPath.from(Parent.class).to("children", Cardinality.TO_MANY).restrict("name", "Joe").getCardinality());
+    assertEquals(Cardinality.TO_MANY, RelationshipPath.from(Parent.class).to("children", Cardinality.TO_MANY).restrict("name", "Sam").to(RelationshipPath.from(Child.class).to("children", Cardinality.TO_MANY)).getCardinality());
   }
 
+  public void testInversePath()
+  {
+    PropertyPath<Parent> propertyPath = RelationshipPath.from(Parent.class).to("child", Child.class, "parent", Cardinality.TO_MANY).toProperty("name");
+    assertEquals(Lists.newArrayList("parent"),
+                 Lists.newArrayList(propertyPath.inversePathIterator()));
+    assertEquals(Lists.newArrayList(Child.class),
+                 Lists.newArrayList(propertyPath.entityClassIterator()));
+  }
+
+}
+
+class Parent extends AbstractEntity<Integer>
+{
+  private static final long serialVersionUID = 1L;
+
+  public Parent(int id)
+  {
+    setEntityId(id);
+  }
+
+  @Override
+  public Object acceptVisitor(AbstractEntityVisitor visitor)
+  {
+    return null;
+  }
+}
+
+class Child extends AbstractEntity<Integer>
+{
+  private static final long serialVersionUID = 1L;
+
+  public Child(int id)
+  {
+    setEntityId(id);
+  }
+
+  @Override
+  public Object acceptVisitor(AbstractEntityVisitor visitor)
+  {
+    return null;
+  }
+}
+
+class Toy extends AbstractEntity<Integer>
+{
+  private static final long serialVersionUID = 1L;
+
+  public Toy(int id)
+  {
+    setEntityId(id);
+  }
+
+  @Override
+  public Object acceptVisitor(AbstractEntityVisitor visitor)
+  {
+    return null;
+  }
 }
